# Voclaude

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cognitiveagents.md  config.example.toml  context_dump.md  package.ps1
.cargo/: config.toml
.claude/: settings.local.json
docs/: CODEBASE_MAP.md  list_of_features.txt  qwen3_asr_integration_plan.md
legacy/whisper/src/: app.rs  config.rs  tray.rs
legacy/whisper/src/audio/: capture.rs  mod.rs
legacy/whisper/src/inference/: mel.rs  mod.rs  whisper.rs
next/voclaude_frontier/: Cargo.toml  README.md
next/voclaude_frontier/config/: default.toml
next/voclaude_frontier/docs/: ARCHITECTURE.md  ROADMAP.md
next/voclaude_frontier/src/: audio.rs  config.rs  main.rs  pipeline.rs
next/voclaude_frontier/src/backend/: mod.rs  qwen_python.rs
next/voclaude_qwen_runtime/: CANDLE_PLAN.md  Cargo.toml  README.md  config.example.toml
next/voclaude_qwen_runtime/src/: app.rs  config.rs  history.rs  hotkey.rs  main.rs  session.rs  tray.rs  ui.rs
next/voclaude_qwen_runtime/src/audio/: capture.rs  mod.rs  processing.rs  ring_buffer.rs
next/voclaude_qwen_runtime/src/inference/: candle_audio.rs  mod.rs  qwen.rs
src/: app.rs  config.rs  history.rs  hotkey.rs  main.rs  session.rs  tray.rs  ui.rs
src/audio/: capture.rs  mod.rs  processing.rs  ring_buffer.rs
src/inference/: candle_audio.rs  candle_backend.rs  candle_tokenizer.rs  mod.rs  model_manager.rs  parakeet.rs  qwen.rs  whisper.rs
tools/qwen3_asr_smoke/: README.md  batch_compare.py  requirements.txt  transcribe.py
