[package]
name = "voclaude"
version = "0.3.0"
edition = "2021"
description = "Voice input anywhere - local-first, GPU-accelerated speech-to-text with Whisper"
license = "MIT"
repository = "https://github.com/matvei77/Voclaude"

[dependencies]
# Audio capture
cpal = "0.15"
hound = "3.5"              # WAV encoding

# Whisper speech-to-text (whisper.cpp)
whisper-rs = { version = "0.14" }

# Audio processing
rubato = "0.15"            # High-quality resampling

# UI
tray-icon = "0.19"
global-hotkey = "0.6"
image = "0.25"
eframe = { version = "0.27", default-features = true }
winit = "0.29"

# System
arboard = "3.4"            # Clipboard
directories = "5.0"        # Config paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
crossbeam-channel = "0.5"  # Fast MPSC channels

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP for model downloads
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Windows message loop
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
notify-rust = "4.11"

[features]
default = []
cuda = ["whisper-rs/cuda"]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1              # Faster dev builds but not painfully slow
