[package]
name = "voclaude-frontier"
version = "0.1.0"
edition = "2021"
description = "Parallel next-gen local STT runtime for Voclaude (Qwen-first, GPU-mandatory)."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
