[package]
name = "voclaude-qwen-runtime"
version = "0.3.0"
edition = "2021"
description = "Voice input anywhere - local-first, GPU-accelerated speech-to-text with Qwen"
license = "MIT"
repository = "https://github.com/matvei77/Voclaude"

[dependencies]
# Audio capture
cpal = "0.15"

# Audio processing
rubato = "0.15"            # High-quality resampling

# UI
tray-icon = "0.19"
global-hotkey = "0.6"
image = "0.25"
eframe = { version = "0.27", default-features = true }
winit = "0.29"

# System
arboard = "3.4"            # Clipboard
directories = "5.0"        # Config paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
crossbeam-channel = "0.5"  # Fast MPSC channels

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# FFT for mel spectrogram
realfft = "3.4"

# ML inference (Candle)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.7"
tokenizers = "0.22"
hf-hub = "0.4"
half = "2.4"
num-traits = "0.2"

# Windows message loop
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
notify-rust = "4.11"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
cpu = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1              # Faster dev builds but not painfully slow
